@@ -1,3 +1,6 @@
+Version 1alpha4 - internally released 2012-11-19
+cmb     implemented resetting of votes from back-end
+
 Version 1alpha3 - internally released 2012-07-04
 cmb	made sorting and filtering case insensitive (but not yet locale aware)
 cmb	added: list view signals, if current user has already voted
